main.tf
resource "aws_vpc" "custom_vpc" {
  cidr_block = var.vpc_cidr
  tags       = { Name = "custom-vpc" }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.custom_vpc.id
  tags   = { Name = "custom-igw" }
}

resource "aws_subnet" "public_subnet_a" {
  vpc_id            = aws_vpc.custom_vpc.id
  cidr_block        = var.public_subnet_a_cidr
  availability_zone = "eu-central-1a"
}

resource "aws_subnet" "public_subnet_b" {
  vpc_id            = aws_vpc.custom_vpc.id
  cidr_block        = var.public_subnet_b_cidr
  availability_zone = "eu-central-1b"
}

resource "aws_db_subnet_group" "rds_subnets" {
  name = "rds-subnet-group-1"
  subnet_ids = [
    aws_subnet.public_subnet_a.id,
    aws_subnet.public_subnet_b.id
  ]
}


resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.custom_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = { Name = "public-rt" }
}

resource "aws_route_table_association" "public_assoc_a" {
  subnet_id      = aws_subnet.public_subnet_a.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "public_assoc_b" {
  subnet_id      = aws_subnet.public_subnet_b.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_security_group" "ec2_sg" {
  name        = "ec2-sg"
  vpc_id      = aws_vpc.custom_vpc.id
  description = "Allow HTTP and SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]  # preuzima se iz GitHub Secret
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    ignore_changes = [
      ingress,
    ]
  }
}

resource "aws_security_group" "rds_sg" {
  name        = "rds-sg"
  vpc_id      = aws_vpc.custom_vpc.id
  description = "Allow PostgreSQL from EC2"

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ec2_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

variable "vpc_id" {}

data "aws_vpc" "custom_vpc" {
  id = var.vpc_id
}

resource "aws_subnet" "public_subnet_a" {
  vpc_id            = data.aws_vpc.custom_vpc.id
  availability_zone = "eu-central-1a"
  cidr_block        = cidrsubnet(data.aws_vpc.custom_vpc.cidr_block, 4, 1)
}
